styles.css
@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap');

@keyframes pirueta {
    0% {
        /* transform: rotateX(0deg); */
        /* transform: rotateY(0deg); */
        transform: rotateZ(0deg);

    }
    50% {
        /* transform: rotateX(180deg); */
        /* transform: rotateY(180deg); */
        transform: matrix3d(
            -0.6,
            1.34788,
            0,
            0,
            -2.34788,
            -0.6,
            0,
            0,
            0,
            0,
            1,
            0,
            0,
            0,
            10,
            1
        );
    }
    100% {
        /* transform: rotateX(360deg); */
        /* transform: rotateY(360deg); */
        transform: matrix3d(
            0.5,
            0,
            -0.866025,
            0,
            0.595877,
            1.2,
            -1.03209,
            0,
            0.866025,
            0,
            0.5,
            0,
            25.9808,
            0,
            15,
            1
        );
    }
}

* {
    font-family: "Orbitron", sans-serif;
    margin: 0;
    color: white;
  }
  
  .skew {
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    background: url(./wallpaper.jpeg);
    background-repeat: no-repeat;
    background-size: cover;
    backdrop-filter: blur(3px) brightness(47.5%) hue-rotate(10deg);
    align-content: space-evenly;
    width: 100vw;
    height: 100vh;
    overflow: hidden;
    --x-translate: 0;
    --y-translate: 0;
    &:hover {
      .skew__item {
        transform: matrix3d(1,0,0.00,var(--x-translate),0.00,1,0.00,var(--y-translate),0,0,1,0,0,0,0,1); 
      }
    }
    &__item {
      width: 60vw;
      max-width: 500px;
      box-shadow: -5px -5px 100px -40px rgb(179, 255, 0);
      transition: 0.4s cubic-bezier(0.64, 0.57, 0.67, 1.53);
      &:hover {
        transition: 0.4s ease-out;
      }
    }
  }

  img {
    max-width: 100%;
    max-height: 30dvh;
    object-fit: fill;
  }

button {
    font-family: "Orbitron", sans-serif;
    padding: 12px 24px;
    background: #44ff00;
    border: none;
    border-radius: 8px;
    font-size: 16px;
    font-weight: 600;
    cursor: pointer;
    width: 100%;
    max-width: 250px;
    margin-top: 10px;
    margin-bottom: 40px;
}

button:hover {
    background: #539925;
    color: #c8ff00;
    animation: pirueta .2s;
}

input {
    padding: 12px;
    border: 1px solid #ccc;
    border-radius: 8px;
    background: #f9f9f9;
    width: 100%;
    max-width: 400px;
    margin: 10px 0;
    font-size: 16px;
    color: #333;
}

h1 {
    overflow: hidden; /* Ensures the content is not revealed until the animation */
    border-right: .15em solid orange; /* The typwriter cursor */
    white-space: nowrap; /* Keeps the content on a single line */
    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
    letter-spacing: .15em; /* Adjust as needed */
    animation: 
      typing 3.5s steps(40, end),
      blink-caret .75s step-end infinite;
  }
  
  /* The typing effect */
  @keyframes typing {
    from { width: 0%; }
    to { width: 100%; }
  }
  
  /* The typewriter cursor effect */
  @keyframes blink-caret {
    from, to { border-color: transparent }
    50% { border-color: orange; }
  }

  #app{
    backdrop-filter: blur(100px);
    gap: 3dvh;
    width: 50dvw;
    display: flex;
    flex-direction: column;
    justify-content: center;
    background: #108700; 
    border-radius: 4dvw; 
    padding: 40px;
    outline: 8px ridge rgb(217, 255, 0);
    color: rgb(217, 255, 0);
    border-radius: 2rem;
    *{
      justify-self: center;
      align-self: center;
    }
  }

